--- a/ui/src/main/resources/static/index.html
+++ b/ui/src/main/resources/static/index.html
@@ -137,7 +137,7 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#"><i class="icofont icofont-shopping-cart"></i></a>
+						<li><a href="buyer_cart.html"><i class="icofont icofont-shopping-cart"></i></a>
 							<div class="addtocart-dropdown">
 								<img src="assets/images/cart-angle.png" alt="cart">
 								<div class="total-price d-flex justify-content-between">
@@ -145,7 +145,7 @@
 									<span>$259.00</span>
 								</div>
 								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
+									<a href="buyer_cart.html" class="btn">view cart</a>
 								</div>
 							</div>
 						</li>
