--- a/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
@@ -214,15 +214,64 @@
 											}
 										</script>
 									</ul>
-									<ul class="car-info col-md-7">
-										<li><b>BID </b><p>2016/2017</p></li>
-										<li><b>Name </b><p>2016/2017</p></li>
-										<li><b>Gender </b><p>2016/2017</p></li>
-										<li><b>Address </b><p>2016/2017</p></li>
-										<li><b>VIP </b><p>2016/2017</p></li>
-										<li><b>Tel </b><p>2016/2017</p></li>
+									<form class="car-info col-md-5">
+										<div class="form-group">
+											<b>BID </b><input value="2016/2017" readonly="readonly" style="border: none;"/>
+										</div>
+										<div class="form-group">
+											<b>VIP </b><input value="2016/2017" readonly="readonly" style="border: none;"/>
+										</div>
+										<div class="form-group">
+											<b>Name </b><input id="input1" value="2016/2017" readonly="readonly" style="border: none;"/>
+											<button class="col-md-4 btn" onclick="update_info(1)" style="float:right;">Update</button>
+										</div>
+										<div class="form-group">
+											<b>Gender </b><input id="input2" value="2016/2017" readonly="readonly" style="border: none;"/>
+											<button class="col-md-4 btn" onclick="update_info(2)" style="float:right;">Update</button>
+										</div>
+										<div class="form-group">
+											<b>Address </b><input id="input3" value="2016/2017" readonly="readonly" style="border: none;"/>
+											<button class="col-md-4 btn" onclick="update_info(3)" style="float:right;">Update</button>
+										</div>
 
-									</ul>
+										<div class="form-group">
+											<b>Tel </b><input id="input4" value="2016/2017" readonly="readonly" style="border: none;"/>
+											<button class="col-md-4 btn" onclick="update_info(4)" style="float:right;">Update</button>
+										</div>
+										<button class="col-md-4 btn" onclick="submit_update_user_info()" style="margin-top:20px;">Submit</button>
+										<script>
+											function update_info(i) {
+												document.getElementById("input" + i).removeAttribute("readonly");
+											}
+											function submit_update_user_info() {
+												let data = new FormData();
+												data.append("Username", document.getElementById("input1").value)
+												data.append("Gender", document.getElementById("input2").value)
+												data.append("Address", document.getElementById("input3").value)
+												data.append("Tel", document.getElementById("input4").value)
+												axios
+													.post("/buyer_user_center/update_buyer_info", data, {
+														headers: { 'Content-Type': "multipart/form-data"  }
+													})
+													.then(function (res) {
+														if(res.data.code === 1) {
+															alert("UPDATE SUCCESS!")
+															window.location.herf="/buyer_user-center";
+														}
+														else {
+															alert("FAILED!")
+														}
+													})
+													.catch(function (error) { // 请求失败处理
+														alert("ERROR")
+														console.log(error);
+														window.location.herf="/buyer_user-center";
+
+													});
+											}
+										</script>
+									</form>
+
 								</div>
 							</div>
 						</div>
