index主页增加了查看所有商家

--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -653,129 +653,56 @@
 
 	<section>
 		<div class="testimonials">
-			<div class="container">						 
-				<div id="owl-testimonials" class="owl-carousel owl-theme">
-				 	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_female.jpg" alt="">
-				  			<h4>Antonio Andreas</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Car Dealer</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_male.jpg" alt="">
-				  			<h4>John Robertson</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Sale Agent</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_female.jpg" alt="">
-				  			<h4>Matias Lucas</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Mechanic</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_male.jpg" alt="">
-				  			<h4>Antonio Andreas</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Car Dealer</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_female.jpg" alt="">
-				  			<h4>John Robertson</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Sale Agent</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_male.jpg" alt="">
-				  			<h4>Matias Lucas</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Mechanic</span>
-				  		</div>
-				  	</div>
-				  	<div class="item wow fadeIn" data-wow-duration="0.75s">
-				 		<ul class="star-rating">
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 			<li><i class="fa fa-star"></i></li>
-				 		</ul>
-				 		<div class="line-dec"></div>
-				  		<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
-				  		<div class="author-rate">
-				  			<img src="assets/images/user_female.jpg" alt="">
-				  			<h4>Antonio Andreas</h4>
-				  			<div class="line-dec2"></div>
-				  			<span>Car Dealer</span>
-				  		</div>
-				  	</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-heading">
+						<div class="icon">
+							<i class="fa fa-car"></i>
+						</div>
+						<div class="text-content">
+							<h2>Seller List</h2>
+							<span>Check our recent posts</span>
+						</div>
+					</div>
 				</div>
 			</div>
+			<div class="container">
+				<div id="owl-testimonials" class="owl-carousel owl-theme">
+					<div id=seller_list class="item wow fadeIn" data-wow-duration="0.75s" v-for="seller in sellers">
+						<ul class="star-rating">
+							<li><i class="fa fa-star"></i></li>
+							<li><i class="fa fa-star"></i></li>
+							<li><i class="fa fa-star"></i></li>
+							<li><i class="fa fa-star"></i></li>
+							<li><i class="fa fa-star"></i></li>
+						</ul>
+						<div class="line-dec"></div>
+						<p><em>"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>"</em></p>
+						<div class="author-rate">
+							<img src="assets/images/user_female.jpg" alt="">
+							<h4>Antonio Andreas</h4>
+							<div class="line-dec2"></div>
+							<span>{{ seller.name }}</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<script>
+				const sellers_show_app = {
+					data() {
+						return {
+							sellers:[
+								{name: "zhangsan"},
+								{name: "lisi"},
+								{name: "hahaha"},
+								{name: "wangwu"},
+								{name: "haha"}
+							]
+						}
+					}
+				}
+				Vue.createApp(sellers_show_app).mount("#owl-testimonials")
+			</script>
 		</div>
 	</section>
 
