--- a/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
@@ -197,6 +197,7 @@
 
 												let formData = new FormData();
 												formData.append("local_img",file,file.name);
+												formData.append("Tel", document.getElementById("TEL").value)
 
 												const config = {
 													headers: { "Content-Type": "multipart/form-data;boundary="+new Date().getTime() }
@@ -216,7 +217,7 @@
 									</ul>
 									<form class="car-info col-md-5">
 										<div class="form-group">
-											<b>BID </b><input value="2016/2017" readonly="readonly" style="border: none;"/>
+											<b>Tel </b><input id="TEL" value="15000000000" readonly="readonly" style="border: none;"/>
 										</div>
 										<div class="form-group">
 											<b>VIP </b><input value="2016/2017" readonly="readonly" style="border: none;"/>
@@ -234,10 +235,6 @@
 											<button class="col-md-4 btn" onclick="update_info(3)" style="float:right;">Update</button>
 										</div>
 
-										<div class="form-group">
-											<b>Tel </b><input id="input4" value="2016/2017" readonly="readonly" style="border: none;"/>
-											<button class="col-md-4 btn" onclick="update_info(4)" style="float:right;">Update</button>
-										</div>
 										<button class="col-md-4 btn" onclick="submit_update_user_info()" style="margin-top:20px;">Submit</button>
 										<script>
 											function update_info(i) {
@@ -248,7 +245,6 @@
 												data.append("Username", document.getElementById("input1").value)
 												data.append("Gender", document.getElementById("input2").value)
 												data.append("Address", document.getElementById("input3").value)
-												data.append("Tel", document.getElementById("input4").value)
 												axios
 													.post("/buyer_user_center/update_buyer_info", data, {
 														headers: { 'Content-Type': "multipart/form-data"  }
@@ -256,7 +252,7 @@
 													.then(function (res) {
 														if(res.data.code === 1) {
 															alert("UPDATE SUCCESS!")
-															window.location.herf="/buyer_user-center";
+															window.location="/buyer_user-center";
 														}
 														else {
 															alert("FAILED!")
@@ -265,7 +261,7 @@
 													.catch(function (error) { // 请求失败处理
 														alert("ERROR")
 														console.log(error);
-														window.location.herf="/buyer_user-center";
+														window.location="/buyer_user-center";
 
 													});
 											}
