--- a/car_trade_project/ui/src/main/resources/static/single_car.html
+++ b/car_trade_project/ui/src/main/resources/static/single_car.html
@@ -54,6 +54,29 @@
 	<script src="assets/js/vue.global.js"></script>
 	<script src="assets/js/axios.min.js"></script>
 
+
+	<script src="assets/js/jquery-1.11.0.min.js"></script>
+
+
+	<!-- Slider Pro Js -->
+	<script src="assets/js/sliderpro.min.js"></script>
+
+	<!-- Slick Slider Js -->
+	<script src="assets/js/slick.js"></script>
+
+	<!-- Owl Carousel Js -->
+	<script src="assets/js/owl.carousel.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/bootstrap.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/wow.animation.js"></script>
+
+	<!-- Custom Js -->
+	<script src="assets/js/custom.js"></script>
+
+
 	<!--[if lt IE 9]>
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="assets/libs/respond.js/1.3.0/respond.min.js"></script
@@ -185,86 +208,107 @@
 							<div class="sp-slides">
 
 								<div class="sp-slide" id="single_car_1">
-									<img  class="sp-image" src="car_slide_1" alt="" />
+									<img  id="car_slide_big_1" class="sp-image" src="car_slide_1" alt="" />
 								</div>
 								<h5>haha</h5>
 
 
 						        <div class="sp-slide">
-						        	<img class="sp-image" v-bind:src="car_slide_2" alt="" />
+						        	<img id=id="car_slide_big_2" class="sp-image" src="car_slide_2" alt="" />
 								</div>
 
 								<div class="sp-slide">
-									<img class="sp-image" v-bind:src="car_slide_3" alt="" />
+									<img id="car_slide_big_3" class="sp-image" src="car_slide_3" alt="" />
 								</div>
 
 								<div class="sp-slide">
-									<img class="sp-image" v-bind:src="car_slide_4" alt="" />
+									<img id="car_slide_big_4" class="sp-image" src="car_slide_4" alt="" />
 								</div>
 
 								<div class="sp-slide">
-									<img class="sp-image" v-bind:src="car_slide_5" alt="" />
+									<img id="car_slide_big_5" class="sp-image" src="car_slide_5" alt="" />
 								</div>
 
 							</div>
 
 							<div class="sp-thumbnails">
-
-								<img class="sp-thumbnail" v-bind:src="car_slide_1" alt="" />
-								<img class="sp-thumbnail" v-bind:src="car_slide_2" alt="" />
-								<img class="sp-thumbnail" v-bind:src="car_slide_3" alt="" />
-								<img class="sp-thumbnail" v-bind:src="car_slide_4" alt="" />
-								<img class="sp-thumbnail" v-bind:src="car_slide_5" alt="" />
+								<img id="car_slide_1" class="sp-thumbnail" src="car_slide_1" alt="" />
+								<img id="car_slide_2" class="sp-thumbnail" src="car_slide_2" alt="" />
+								<img id="car_slide_3" class="sp-thumbnail" src="car_slide_3" alt="" />
+								<img id="car_slide_4" class="sp-thumbnail" src="car_slide_4" alt="" />
+								<img id="car_slide_5" class="sp-thumbnail" src="car_slide_5" alt="" />
 							</div>
 					    </div>
 
 						<script>
-							const app = {
-								data() {
-									return {
-										car_slide_1:"./assets/images/car_slide_1.jpg",
-										car_slide_2:"./assets/images/car_slide_2.jpg",
-										car_slide_3:"./assets/images/car_slide_3.jpg",
-										car_slide_4:"./assets/images/car_slide_4.jpg",
-										car_slide_5:"./assets/images/car_slide_5.jpg"
-									}
-								},
 
-								mounted() {
-									let data = new FormData;
-									data.append("car_slide_1",this.car_slide_1);
-									data.append("car_slide_2",this.car_slide_2);
-									data.append("car_slide_3",this.car_slide_3);
-									data.append("car_slide_4",this.car_slide_4);
-									data.append("car_slide_5",this.car_slide_5);
-
-									//获取页面url
-									var sHref = window.location.href;
-									var args = sHref.split('?');
-									if(args[0]===sHref){
-										return "";
-									}
-
-									var arr = args[1].split("&");
-									var obj = {};
-									for(var i=0;i<arr.length;i++){
-										var arg = arr[i].split('=');
-										obj[arg[0]] = arg[1];
-									}
-
-									let temp_id=obj[id];
-									axios
-											.get("http://127.0.0.1:7899/CarAPI/ttt?id="+temp_id, data,
-													{headers: { 'Content-Type': "multipart/form-data"  }})
-											.then(response => (
-													this.data = response.data
-											))
-											.catch(function (error) {
-												console.log(error);
-											});
+							function get_id() {
+								//获取页面url_id
+								var sHref = window.location.href;
+								var args = sHref.split('?');
+								if (args[0] === sHref) {
+									return "";
 								}
+								var arr = args[1].split("&");
+								var obj = {};
+								for (var i = 0; i < arr.length; i++) {
+									var arg = arr[i].split('=');
+									obj[arg[0]] = arg[1];
+								}
+								return obj["id"]
 							}
-							Vue.createApp(app).mount("#single-car")
+
+							// const app = {
+							// 	data() {
+							// 		return {
+							// 			 car_slide_1:"./assets/images/car_slide_1.jpg",
+							// 			 car_slide_2:"./assets/images/car_slide_2.jpg",
+							// 			 car_slide_3:"./assets/images/car_slide_3.jpg",
+							// 			 car_slide_4:"./assets/images/car_slide_4.jpg",
+							// 			 car_slide_5:"./assets/images/car_slide_5.jpg"
+							// 		}
+							// 	},
+
+
+									// let data = new FormData;
+									// data.append("car_slide_1",this.car_slide_1);
+									// data.append("car_slide_2",this.car_slide_2);
+									// data.append("car_slide_3",this.car_slide_3);
+									// data.append("car_slide_4",this.car_slide_4);
+									// data.append("car_slide_5",this.car_slide_5);
+
+									$(document).ready(function() {
+										let temp_id=get_id();
+										axios
+												.get("http://localhost:8000/CarAPI/ttt?id=" + temp_id
+												)
+												.then(function (response) {
+													console.log(response.data);
+													console.log(response.data["msg"]);
+													console.log(response.data["data"][0]);
+													document.getElementById("car_slide_1").setAttribute("src",response.data["data"][0]);
+													document.getElementById("car_slide_2").setAttribute("src",response.data["data"][1]);
+													document.getElementById("car_slide_3").setAttribute("src",response.data["data"][2]);
+													document.getElementById("car_slide_4").setAttribute("src",response.data["data"][3]);
+													document.getElementById("car_slide_5").setAttribute("src",response.data["data"][4]);
+
+													document.getElementById("car_slide_big_1").setAttribute("src",response.data["data"][0]);
+													document.getElementById("car_slide_big_2").setAttribute("src",response.data["data"][1]);
+													document.getElementById("car_slide_big_3").setAttribute("src",response.data["data"][2]);
+													document.getElementById("car_slide_big_4").setAttribute("src",response.data["data"][3]);
+													document.getElementById("car_slide_big_5").setAttribute("src",response.data["data"][4]);
+															// this.car_slide_2 = response.data["data"][1];
+															// this.car_slide_3 = response.data["data"][2];
+															// this.car_slide_4 = response.data["data"][3];
+															// this.car_slide_5 = response.data["data"][4];
+
+														}
+												)
+												.catch(function (error) {
+													console.log(error);
+												});
+									})
+							// Vue.createApp(app).mount("#single-car")
 						</script>
 
 					</div>
@@ -595,25 +639,7 @@
 	</footer>
 	
 
-	<script src="assets/js/jquery-1.11.0.min.js"></script>
 
-	<!-- Slider Pro Js -->
-	<script src="assets/js/sliderpro.min.js"></script>
-
-	<!-- Slick Slider Js -->
-	<script src="assets/js/slick.js"></script>
-
-	<!-- Owl Carousel Js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
-
-	<!-- Boostrap Js -->
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!-- Boostrap Js -->
-    <script src="assets/js/wow.animation.js"></script>
-
-	<!-- Custom Js -->
-    <script src="assets/js/custom.js"></script>
 
 <!--	<script>-->
 <!--		console.alert(document.parentElement);-->
